[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kra-mcp"
version = "0.1.0"
description = "MCP server for Kenya Revenue Authority tax compliance — PAYE calculator, PIN reg"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["fastmcp>=0.9"]

[project.scripts]
kra-mcp = "kra_mcp.server:mcp.run"

[tool.setuptools.packages.find]
where = ["src"]
